<resources>
    <string name="app_name">heyWater</string>
    <string name="hint_weight">Your Weight (kg)</string>
    <string name="hint_age">Your Age</string>
    <string name="text_button_calculate">Calculate water intake</string>
    <string name="text_button_reminder">Reminder</string>
    <string name="text_button_alarm">Alarm</string>
    <string name="text_hour">00</string>
    <string name="text_two_point">:</string>
    <string name="text_minute">00</string>
    <string name="toast_information_weight">inform your weight!</string>
    <string name="toast_information_age">inform your age!</string>
    <string name="dialog_title">Reset Data</string>
    <string name="dialog_desc">Do you want to delete all existing data?</string>
    <string name="alarm_message">Time to drink water!</string>
</resources>