<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/drink"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintStart_toStartOf="@id/container_header"/>

    <ImageView
        android:id="@+id/ic_refresh"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="@id/container_header"/>

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:textColorHint="@android:color/holo_blue_dark"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:textColorHint="@android:color/holo_blue_dark"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/edit_weight"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_button_calculate"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_button"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/container_result_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/container_result_ml"
        app:layout_constraintTop_toBottomOf="@id/bt_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_result_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2008,6 ml"
        android:textSize="35sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/container_result_ml"
        app:layout_constraintStart_toStartOf="@id/container_result_ml"
        app:layout_constraintEnd_toEndOf="@id/container_result_ml"
        app:layout_constraintBottom_toBottomOf="@id/container_result_ml"/>

    <Button
        android:id="@+id/bt_define_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_alarm"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_result_ml"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_reminder"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_result_ml"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hour"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        app:layout_constraintTop_toBottomOf="@id/bt_define_reminder"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_two_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_two_point"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/bt_define_reminder"
        app:layout_constraintStart_toEndOf="@id/txt_hour"/>

    <TextView
        android:id="@+id/txt_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_minute"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/bt_define_reminder"
        app:layout_constraintStart_toEndOf="@id/txt_two_point"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>